# aaaa0ggmcLib

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  configure.sh  xmake.lua
cmake/: aaaa0ggmcLibConfig.cmake.in
docs/: aalgorithm.md  adata.md  aecs.md  alogger.md  index.md
docs/adata/: index.md
docs/perf/: analyze_perf.py  bozo.txt  bubble.txt  cocktail.txt  comb.txt  gnome.txt  insertion.txt  odd_even.txt  perf_summary.txt  pyproject.toml  quick<PartitionHoare>.txt  quick<PartitionLomuto>.txt  quick<PartitionMedianThree>.txt  selection.txt  shell<ShellGapType::Div2>.txt  shell<ShellGapType::Hibbard>.txt  shell<ShellGapType::Knuth>.txt  sleep.txt  std::sort.txt
include/alib-g5/: autil.h
include/alib5/: aalgorithm.h  abase.h  aclock.h  aco.h  acommand.h  adata.h  adebug.h  adiscrete_math.h  aecs.h  aerr_id.h  aeval.h  aio.h  alogger.h  anet.h  aparser.h  aperf.h  aref.h  arequest.h  arouter.h  astorage.h  atranslator.h  autil.h  aweb.h
include/alib5/algorithm/: search.h  sort.h  sort_pos_iterator.h  sort_wrapper_concepts.h
include/alib5/algorithm/searches/: _template.inl  base.h  kmp.h  plain.h
include/alib5/algorithm/sorts/: _template.inl  base.h
include/alib5/algorithm/sorts/bases/: pos_iterator.h  wrapper_concepts.h
include/alib5/compact/: make_table.h  manip_table.h  manip_table_impl.h
include/alib5/data/: data_json.h  data_toml.h  kernel.h  reflect.h  reflect_v2.h  validator.h
include/alib5/data/reflect/: attributes.h  from_adata.h  gen_schema.h  kernel.h  to_adata.h
include/alib5/detail/: abase.h  aerr_id.h
include/alib5/ecs/: component_concepts.h  component_pool.h  cycle_checker.h  entity.h  entity_manager.h  linear_storage.h
include/alib5/eval/: executor.h  kernel.h  standard_math.h  trie.h
include/alib5/log/: base_config.h  base_mod.h  base_msg.h  filters.h  kernel.h  manipulator.h  prefab.h  streamed_context.h  targets.h
include/alib5/net/: client.h
include/alib5/web/: base.h  client.h  server.h
src/: acommand.cpp  adata.cpp  aeval.cpp  alogger.cpp  aparser.cpp  arouter.cpp  atranslator.cpp  autil.cpp  aweb_client.cpp  aweb_server.cpp  mainp_table.cpp
src/data/: json.cpp  toml.cpp  validator.cpp  validator_debug.cpp
xmake/: package.lua
(+11 files in other folders)
